external_libraries/gidpost/fortran_module/gidpost_interface.f90


    label_cpp = C_STRING(label)
    CALL GiD_BeginMeshColor_cpp(label_cpp,dim,elemtype,nnode,red,green,blue)

  END SUBROUTINE GiD_BeginMeshColor
    
  SUBROUTINE GiD_fBeginMeshColor(fd,label,dim,elemtype,nnode,red,green,blue)

    TYPE(GiD_File),        INTENT(IN) :: fd
    CHARACTER(LEN=*),      INTENT(IN) :: label
    TYPE(GiD_Dimension),   INTENT(IN) :: dim
    TYPE(GiD_ElementType), INTENT(IN) :: elemtype
    INTEGER(C_INT),        INTENT(IN) :: nnode
    REAL(C_DOUBLE),        INTENT(IN) :: red, green, blue

    CHARACTER(1,KIND=C_CHAR) :: label_cpp(MAX_STRING_LEN)

    INTERFACE
      SUBROUTINE GiD_fBeginMeshColor_cpp(fd,label_cpp,dim,elemtype,nnode,red,green,blue) BIND(C,NAME='GiD_fBeginMeshColor')
        IMPORT:: C_DOUBLE, GiD_Dimension, GiD_ElementType, C_INT, C_CHAR, GiD_File
        TYPE(GiD_File),        VALUE, INTENT(IN) :: fd
        CHARACTER(1,KIND=C_CHAR),     INTENT(IN) :: label_cpp(1)
        TYPE(GiD_Dimension),   VALUE, INTENT(IN) :: dim
        TYPE(GiD_ElementType), VALUE, INTENT(IN) :: elemtype
        INTEGER(C_INT),        VALUE, INTENT(IN) :: nnode
        REAL(C_DOUBLE),        VALUE, INTENT(IN) :: red, green, blue
      END SUBROUTINE GiD_fBeginMeshColor_cpp
    END INTERFACE

    label_cpp = C_STRING(label)
    CALL GiD_fBeginMeshColor_cpp(fd,label_cpp,dim,elemtype,nnode,red,green,blue)

  END SUBROUTINE GiD_fBeginMeshColor
  
!--------------------------------------------------------------------------
    
  SUBROUTINE GiD_OpenPostResultFile(filename,postmode)

    CHARACTER(LEN=*),   INTENT(IN) :: filename
    TYPE(GiD_PostMode), INTENT(IN) :: postmode

    CHARACTER(1,KIND=C_CHAR) :: filename_cpp(MAX_STRING_LEN)

    INTERFACE
      SUBROUTINE GiD_OpenPostResultFile_cpp(filename_cpp,postmode) BIND(C,NAME='GiD_OpenPostResultFile')
        IMPORT:: GiD_PostMode, C_CHAR
        CHARACTER(1,KIND=C_CHAR),  INTENT(IN) :: filename_cpp(1)
        TYPE(GiD_PostMode), VALUE, INTENT(IN) :: postmode
      END SUBROUTINE GiD_OpenPostResultFile_cpp
    END INTERFACE

    filename_cpp = C_STRING(filename)
    CALL GiD_OpenPostResultFile_cpp(filename_cpp,postmode)

  END SUBROUTINE GiD_OpenPostResultFile

  FUNCTION GiD_fOpenPostResultFile(filename,postmode) RESULT(fd)

    CHARACTER(LEN=*),   INTENT(IN) :: filename
    TYPE(GiD_PostMode), INTENT(IN) :: postmode
    TYPE(GiD_File) :: fd

    CHARACTER(1,KIND=C_CHAR) :: filename_cpp(MAX_STRING_LEN)

    INTERFACE
      INTEGER(C_INT) FUNCTION GiD_fOpenPostResultFile_cpp(filename_cpp,postmode) BIND(C,NAME='GiD_fOpenPostResultFile')
        IMPORT:: GiD_PostMode, C_CHAR, GiD_File, C_INT
        CHARACTER(1,KIND=C_CHAR),  INTENT(IN) :: filename_cpp(1)
        TYPE(GiD_PostMode), VALUE, INTENT(IN) :: postmode
      END FUNCTION GiD_fOpenPostResultFile_cpp
    END INTERFACE

    filename_cpp = C_STRING(filename)
    fd%file_unit = GiD_fOpenPostResultFile_cpp(filename_cpp,postmode)

  END FUNCTION GiD_fOpenPostResultFile
  
  FUNCTION GiD_fOpenPostResultFile_utf8(filename,postmode) RESULT(fd)

    CHARACTER(LEN=*),   INTENT(IN) :: filename
    TYPE(GiD_PostMode), INTENT(IN) :: postmode
    TYPE(GiD_File) :: fd

    CHARACTER(1,KIND=C_CHAR) :: filename_cpp(MAX_STRING_LEN)

    INTERFACE
      INTEGER(C_INT) FUNCTION GiD_fOpenPostResultFile_utf8_cpp(filename_cpp,postmode) BIND(C,NAME='GiD_fOpenPostResultFile_utf8')
        IMPORT:: GiD_PostMode, C_CHAR, GiD_File, C_INT
        CHARACTER(1,KIND=C_CHAR),  INTENT(IN) :: filename_cpp(1)
        TYPE(GiD_PostMode), VALUE, INTENT(IN) :: postmode
      END FUNCTION GiD_fOpenPostResultFile_utf8_cpp
    END INTERFACE

    filename_cpp = C_STRING(filename)
    fd%file_unit = GiD_fOpenPostResultFile_utf8_cpp(filename_cpp,postmode)

  END FUNCTION GiD_fOpenPostResultFile_utf8
  
!--------------------------------------------------------------------------
    
  SUBROUTINE GiD_BeginGaussPoint(label,elemtype,meshname,ngauss,nodeincluded,internalcoord)
    
    CHARACTER(LEN=*),      INTENT(IN) :: label
    TYPE(GiD_ElementType), INTENT(IN) :: elemtype
    CHARACTER(LEN=*),      INTENT(IN) :: meshname
    INTEGER(C_INT),        INTENT(IN) :: ngauss
    INTEGER(C_INT),        INTENT(IN) :: nodeincluded
    INTEGER(C_INT),        INTENT(IN) :: internalcoord

    CHARACTER(1,KIND=C_CHAR) :: label_cpp(MAX_STRING_LEN), meshname_cpp(MAX_STRING_LEN)

    INTERFACE
      SUBROUTINE GiD_BeginGaussPoint_cpp(label_cpp,elemtype,meshname_cpp,ngauss,nodeincluded,internalcoord) &
        BIND(C,NAME='GiD_BeginGaussPoint')
        IMPORT:: GiD_ElementType, C_INT, C_CHAR
        CHARACTER(1,KIND=C_CHAR),     INTENT(IN) :: label_cpp(1)
        TYPE(GiD_ElementType), VALUE, INTENT(IN) :: elemtype
        CHARACTER(1,KIND=C_CHAR),     INTENT(IN) :: meshname_cpp(1)
        INTEGER(C_INT),        VALUE, INTENT(IN) :: ngauss
        INTEGER(C_INT),        VALUE, INTENT(IN) :: nodeincluded
        INTEGER(C_INT),        VALUE, INTENT(IN) :: internalcoord
      END SUBROUTINE GiD_BeginGaussPoint_cpp
    END INTERFACE

    label_cpp    = C_STRING(label)
    meshname_cpp = C_STRING(meshname)
    CALL GiD_BeginGaussPoint_cpp(label_cpp,elemtype,meshname_cpp,ngauss,nodeincluded,internalcoord)

  END SUBROUTINE GiD_BeginGaussPoint
    
  SUBROUTINE GiD_fBeginGaussPoint(fd,label,elemtype,meshname,ngauss,nodeincluded,internalcoord)
    
    TYPE(GiD_File),        INTENT(IN) :: fd
    CHARACTER(LEN=*),      INTENT(IN) :: label
    TYPE(GiD_ElementType), INTENT(IN) :: elemtype
    CHARACTER(LEN=*),      INTENT(IN) :: meshname
    INTEGER(C_INT),        INTENT(IN) :: ngauss
    INTEGER(C_INT),        INTENT(IN) :: nodeincluded
    INTEGER(C_INT),        INTENT(IN) :: internalcoord

    CHARACTER(1,KIND=C_CHAR) :: label_cpp(MAX_STRING_LEN), meshname_cpp(MAX_STRING_LEN)

    INTERFACE
      SUBROUTINE GiD_fBeginGaussPoint_cpp(fd,label_cpp,elemtype,meshname_cpp,ngauss,nodeincluded,internalcoord) &
        BIND(C,NAME='GiD_fBeginGaussPoint')
        IMPORT:: GiD_ElementType, C_INT, C_CHAR, GiD_File
        TYPE(GiD_File),        VALUE, INTENT(IN) :: fd
        CHARACTER(1,KIND=C_CHAR),     INTENT(IN) :: label_cpp(1)
        TYPE(GiD_ElementType), VALUE, INTENT(IN) :: elemtype
        CHARACTER(1,KIND=C_CHAR),     INTENT(IN) :: meshname_cpp(1)
        INTEGER(C_INT),        VALUE, INTENT(IN) :: ngauss
        INTEGER(C_INT),        VALUE, INTENT(IN) :: nodeincluded
        INTEGER(C_INT),        VALUE, INTENT(IN) :: internalcoord
      END SUBROUTINE GiD_fBeginGaussPoint_cpp
    END INTERFACE

    label_cpp    = C_STRING(label)
    meshname_cpp = C_STRING(meshname)
    CALL GiD_fBeginGaussPoint_cpp(fd,label_cpp,elemtype,meshname_cpp,ngauss,nodeincluded,internalcoord)

  END SUBROUTINE GiD_fBeginGaussPoint
  
!--------------------------------------------------------------------------
  
  SUBROUTINE GiD_BeginRangeTable(label)
  
    CHARACTER(LEN=*), INTENT(IN) :: label

    CHARACTER(1,KIND=C_CHAR) :: label_cpp(MAX_STRING_LEN)

    INTERFACE
      SUBROUTINE GiD_BeginRangeTable_cpp(label_cpp) BIND(C,NAME='GiD_BeginRangeTable')
        IMPORT :: C_CHAR
        CHARACTER(1,KIND=C_CHAR), INTENT(IN) :: label_cpp(1)
      END SUBROUTINE GiD_BeginRangeTable_cpp
    END INTERFACE

    label_cpp = C_STRING(label)
    CALL GiD_BeginRangeTable_cpp(label_cpp)

  END SUBROUTINE GiD_BeginRangeTable
  
  SUBROUTINE GiD_fBeginRangeTable(fd,label)
  
    TYPE(GiD_File),   INTENT(IN) :: fd
    CHARACTER(LEN=*), INTENT(IN) :: label

    CHARACTER(1,KIND=C_CHAR) :: label_cpp(MAX_STRING_LEN)

    INTERFACE
      SUBROUTINE GiD_fBeginRangeTable_cpp(fd,label_cpp) BIND(C,NAME='GiD_fBeginRangeTable')
        IMPORT :: C_CHAR, GiD_File
        TYPE(GiD_File),    VALUE, INTENT(IN) :: fd
        CHARACTER(1,KIND=C_CHAR), INTENT(IN) :: label_cpp(1)
      END SUBROUTINE GiD_fBeginRangeTable_cpp
    END INTERFACE

    label_cpp = C_STRING(label)
    CALL GiD_fBeginRangeTable_cpp(fd,label_cpp)

  END SUBROUTINE GiD_fBeginRangeTable
  
!--------------------------------------------------------------------------

  SUBROUTINE GiD_WriteMinRange(minvalue,label)

    REAL(C_DOUBLE),   INTENT(IN) :: minvalue
    CHARACTER(LEN=*), INTENT(IN) :: label

    CHARACTER(1,KIND=C_CHAR) :: label_cpp(MAX_STRING_LEN)

    INTERFACE
      SUBROUTINE GiD_WriteMinRange_cpp(minvalue,label_cpp) BIND(C,NAME='GiD_WriteMinRange')
        IMPORT :: C_DOUBLE, C_CHAR
        REAL(C_DOUBLE),    VALUE, INTENT(IN) :: minvalue
        CHARACTER(1,KIND=C_CHAR), INTENT(IN) :: label_cpp(1)
      END SUBROUTINE GiD_WriteMinRange_cpp
    END INTERFACE

    label_cpp = C_STRING(label)
    CALL GiD_WriteMinRange_cpp(minvalue,label_cpp)

  END SUBROUTINE GiD_WriteMinRange

  SUBROUTINE GiD_fWriteMinRange(fd,minvalue,label)

    TYPE(GiD_File),   INTENT(IN) :: fd
    REAL(C_DOUBLE),   INTENT(IN) :: minvalue
    CHARACTER(LEN=*), INTENT(IN) :: label

    CHARACTER(1,KIND=C_CHAR) :: label_cpp(MAX_STRING_LEN)

    INTERFACE
      SUBROUTINE GiD_fWriteMinRange_cpp(fd,minvalue,label_cpp) BIND(C,NAME='GiD_fWriteMinRange')
        IMPORT :: C_DOUBLE, C_CHAR, GiD_File
        TYPE(GiD_File),    VALUE, INTENT(IN) :: fd
        REAL(C_DOUBLE),    VALUE, INTENT(IN) :: minvalue
        CHARACTER(1,KIND=C_CHAR), INTENT(IN) :: label_cpp(1)
      END SUBROUTINE GiD_fWriteMinRange_cpp
    END INTERFACE

    label_cpp = C_STRING(label)
    CALL GiD_fWriteMinRange_cpp(fd,minvalue,label_cpp)

  END SUBROUTINE GiD_fWriteMinRange

!--------------------------------------------------------------------------

  SUBROUTINE GiD_WriteRange(minvalue,maxvalue,label)

    REAL(C_DOUBLE),   INTENT(IN) :: minvalue, maxvalue
    CHARACTER(LEN=*), INTENT(IN) :: label

    CHARACTER(1,KIND=C_CHAR) :: label_cpp(MAX_STRING_LEN)

    INTERFACE
      SUBROUTINE GiD_WriteRange_cpp(minvalue,maxvalue,label_cpp) BIND(C,NAME='GiD_WriteRange')
        IMPORT :: C_DOUBLE, C_CHAR
        REAL(C_DOUBLE),    VALUE, INTENT(IN) :: minvalue, maxvalue
        CHARACTER(1,KIND=C_CHAR), INTENT(IN) :: label_cpp(1)
      END SUBROUTINE GiD_WriteRange_cpp
    END INTERFACE

    label_cpp = C_STRING(label)
    CALL GiD_WriteRange_cpp(minvalue,maxvalue,label_cpp)

  END SUBROUTINE GiD_WriteRange

  SUBROUTINE GiD_fWriteRange(fd,minvalue,maxvalue,label)

    TYPE(GiD_File),   INTENT(IN) :: fd
    REAL(C_DOUBLE),   INTENT(IN) :: minvalue, maxvalue
    CHARACTER(LEN=*), INTENT(IN) :: label

    CHARACTER(1,KIND=C_CHAR) :: label_cpp(MAX_STRING_LEN)

    INTERFACE
      SUBROUTINE GiD_fWriteRange_cpp(fd,minvalue,maxvalue,label_cpp) BIND(C,NAME='GiD_fWriteRange')
        IMPORT :: C_DOUBLE, C_CHAR, GiD_File
        TYPE(GiD_File),    VALUE, INTENT(IN) :: fd
        REAL(C_DOUBLE),    VALUE, INTENT(IN) :: minvalue, maxvalue
        CHARACTER(1,KIND=C_CHAR), INTENT(IN) :: label_cpp(1)
      END SUBROUTINE GiD_fWriteRange_cpp
    END INTERFACE

    label_cpp = C_STRING(label)
    CALL GiD_fWriteRange_cpp(fd,minvalue,maxvalue,label_cpp)

  END SUBROUTINE GiD_fWriteRange

!--------------------------------------------------------------------------

  SUBROUTINE GiD_WriteMaxRange(maxvalue,label)

    REAL(C_DOUBLE),   INTENT(IN) :: maxvalue
    CHARACTER(LEN=*), INTENT(IN) :: label

    CHARACTER(1,KIND=C_CHAR) :: label_cpp(MAX_STRING_LEN)

    INTERFACE
      SUBROUTINE GiD_WriteMaxRange_cpp(maxvalue,label_cpp) BIND(C,NAME='GiD_WriteMaxRange')
        IMPORT :: C_DOUBLE, C_CHAR
        REAL(C_DOUBLE),    VALUE, INTENT(IN) :: maxvalue
        CHARACTER(1,KIND=C_CHAR), INTENT(IN) :: label_cpp(1)
      END SUBROUTINE GiD_WriteMaxRange_cpp
    END INTERFACE

    label_cpp = C_STRING(label)
    CALL GiD_WriteMaxRange_cpp(maxvalue,label_cpp)

  END SUBROUTINE GiD_WriteMaxRange

  SUBROUTINE GiD_fWriteMaxRange(fd,maxvalue,label)

    TYPE(GiD_File),   INTENT(IN) :: fd
    REAL(C_DOUBLE),   INTENT(IN) :: maxvalue
    CHARACTER(LEN=*), INTENT(IN) :: label

    CHARACTER(1,KIND=C_CHAR) :: label_cpp(MAX_STRING_LEN)
